--- a/index.html
+++ b/index.html
@@ -1,12 +1,255 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Commerce</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
 </head>
+
 <body>
-    
+    <!-- header start -->
+    <header>
+        <nav class="navbar navbar-expand-lg navbar-light bg-light ">
+            <div class="container">
+                <a class="navbar-brand" href="#">
+                    <img src="images/logo.png" alt="">
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent"
+                    aria-expanded="false" aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="#">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="shoes">Shoes</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="bages">Backpack</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="Subscribe">Subscribe</a>
+                        </li>
+                </div>
+            </div>
+        </nav>
+
+        <section class="container my-5">
+            <div id="carouselExampleControls" class="carousel slide" data-bs-ride="carousel">
+                <div class="carousel-inner rounded-3">
+                    <div class="carousel-item active">
+                        <div
+                            class="row p-3  bg-danger p-2 text-dark bg-opacity-50  p-2 text-dark d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Cool Dude Headphone</h1>
+                                <p>This is the best headphone in the world for people who just want to waste time in
+                                    front of funky world.</p>
+                                <h1>$420</h1>
+                                <button type="button" class="btn btn-danger">Bye Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/headphone.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div
+                            class="row p-3  border bg-info p-2 text-dark bg-opacity-50 p-2 text-dark d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>Mega LCD TV For Sports </h1>
+                                <p>This is the best tv in the world for people who just want to waste time in front of
+                                    tv.</p>
+                                <h1>$1220</h1>
+                                <button type="button" class="btn btn-danger">Bye Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/tv.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                    <div class="carousel-item">
+                        <div
+                            class="row p-3  border bg-success p-2 text-dark bg-opacity-50 p-2 text-dark d-flex align-items-center">
+                            <div class="col-lg-7">
+                                <h1>X-Box for your living room</h1>
+                                <p>This is the best x-box in the world for people who just want to waste time in front
+                                    of fake sports.</p>
+                                <h1>$620</h1>
+                                <button type="button" class="btn btn-danger">Bye Now</button>
+                            </div>
+                            <div class="col-lg-5">
+                                <img src="images/banner-images/xbox.png" class="d-block w-100" alt="...">
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="prev">
+                    <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Previous</span>
+                </button>
+                <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleControls"
+                    data-bs-slide="next">
+                    <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                    <span class="visually-hidden">Next</span>
+                </button>
+            </div>
+        </section>
+    </header>
+    <main>
+        <!-- items issus -->
+        <section class="container">
+            <div class="row g-2">
+                <div class="col-lg-4">
+                    <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
+                        <h1>Watch</h1>
+                        <img src="./images/categories/watch.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div
+                        class="p-3 border bg-success p-2 text-dark bg-opacity-50 d-flex align-items-center justify-content-between rounded-3">
+                        <h1>Shoes</h1>
+                        <img src="./images/categories/shoes.png" alt="">
+                    </div>
+                </div>
+                <div class="col-lg-4">
+                    <div
+                        class="p-3 border bg-danger p-2 text-dark bg-opacity-50 d-flex align-items-center justify-content-between rounded-3">
+                        <h1>Bag</h1>
+                        <img src="./images/categories/bag.png" alt="">
+                    </div>
+                </div>
+
+        </section>
+
+        <!-- shoes -->
+        <section class="container my-5 " id="shoes">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1  row-cols-md-3 g-4 my-3">
+                <div class="col ">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/shoes/shoe-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Supply 350</h5>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                            <h1>$120</h1>
+                        </div>
+
+                        <div class="m-3">
+                            <button type="button" class="btn btn-danger">Bye Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="./images/shoes/shoe-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Nike 360</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <h1>$180</h1>
+                        </div>
+                        <div class="m-3">
+                            <button type="button" class="btn btn-danger">Bye Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="./images/shoes/shoe-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Airmax</h5>
+                            <p class="card-text">This card has supporting text below as a natural lead-in to additional
+                                content.</p>
+                            <h1>$200</h1>
+                        </div>
+                        <div class="m-3">
+                            <button type="button" class="btn btn-danger">Bye Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- bages  -->
+        <section class="container my-5" id="bages">
+            <h2>Shoes</h2>
+            <div class="row row-cols-1  row-cols-md-3 g-4 my-3">
+                <div class="col ">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Red Laltu Bag</h5>
+                            <h1>$1500</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <button type="button" class="btn btn-danger">Bye Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col ">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Blue Niltu Bag</h5>
+                            <h1>$920</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <button type="button" class="btn btn-danger">Bye Now</button>
+                        </div>
+                    </div>
+                </div>
+                <div class="col ">
+                    <div class="card h-100 border-0 shadow-lg">
+                        <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
+                        <div class="card-body">
+                            <h5 class="card-title">Black Kaltu Bag</h5>
+                            <h1>$1200</h1>
+                            <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
+                                additional content. This content is a little bit longer.</p>
+                        </div>
+                        <div class="m-3">
+                            <button type="button" class="btn btn-danger">Bye Now</button>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
+
+        <!-- Subscribe -->
+        <section style="height: 300px;" class="container bg-info d-flex justify-content-center align-items-center rounded-3" id="Subscribe">
+            <div>
+                <h1>LET'S STAY IN TOUCH</h1>
+                <p>Get updates on sales, specials and more</p>
+                <input type="text" placeholder="Enter Your Email">
+                <br>
+                <button class="btn btn-warning">Subdcribe</button>
+            </div>
+        </section>
+
+    </main>
+    <footer class="mt-5 text-center">
+        <span><p>
+            ©2020. Panda Commerce. All rights reserved.Sabbir
+        </p></span>
+    </footer>
+    <!-- script -->
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
+        crossorigin="anonymous"></script>
 </body>
+
 </html>
