--- a/index.html
+++ b/index.html
@@ -7,7 +7,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Panda Commerce</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.3/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+      integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3" crossorigin="anonymous">
+
+    <!-- css link  -->
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -29,13 +32,13 @@
                             <a class="nav-link active" aria-current="page" href="#">Home</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="shoes">Shoes</a>
+                            <a class="nav-link" href="#shoes">Shoes</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="bages">Backpack</a>
+                            <a class="nav-link" href="#bages">Backpack</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link" href="Subscribe">Subscribe</a>
+                            <a class="nav-link" href="#Subscribe">Subscribe</a>
                         </li>
                 </div>
             </div>
@@ -107,20 +110,20 @@
         <!-- items issus -->
         <section class="container">
             <div class="row g-2">
-                <div class="col-lg-4">
+                <div class="col-lg-4 product">
                     <div class="p-3 border bg-warning d-flex align-items-center justify-content-between rounded-3">
                         <h1>Watch</h1>
                         <img src="./images/categories/watch.png" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 product">
                     <div
                         class="p-3 border bg-success p-2 text-dark bg-opacity-50 d-flex align-items-center justify-content-between rounded-3">
                         <h1>Shoes</h1>
                         <img src="./images/categories/shoes.png" alt="">
                     </div>
                 </div>
-                <div class="col-lg-4">
+                <div class="col-lg-4 product">
                     <div
                         class="p-3 border bg-danger p-2 text-dark bg-opacity-50 d-flex align-items-center justify-content-between rounded-3">
                         <h1>Bag</h1>
@@ -182,9 +185,9 @@
 
         <!-- bages  -->
         <section class="container my-5" id="bages">
-            <h2>Shoes</h2>
+            <h2>Bags</h2>
             <div class="row row-cols-1  row-cols-md-3 g-4 my-3">
-                <div class="col ">
+                <div class="col bags">
                     <div class="card h-100 border-0 shadow-lg">
                         <img src="images/bags/bag-1.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -198,7 +201,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col ">
+                <div class="col bags ">
                     <div class="card h-100 border-0 shadow-lg">
                         <img src="images/bags/bag-2.png" class="card-img-top" alt="...">
                         <div class="card-body">
@@ -212,7 +215,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="col ">
+                <div class="col bags ">
                     <div class="card h-100 border-0 shadow-lg">
                         <img src="images/bags/bag-3.png" class="card-img-top" alt="...">
                         <div class="card-body">
